added anomaly detection
